[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Altares/Life Altar.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[node name="Life Altar" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RangeParaAbrir" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeParaAbrir"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -8.60409
margin_top = -49.265
margin_right = 77.3959
margin_bottom = -35.265
text = "% of your life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -28.4378
margin_top = -49.4703
margin_right = -12.4378
margin_bottom = -35.4703
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="RangeParaAbrir" to="." method="_on_RangeParaAbrir_body_entered"]
[connection signal="body_exited" from="RangeParaAbrir" to="." method="_on_RangeParaAbrir_body_exited"]
